--- a/.gitignore
+++ b/.gitignore
@@ -1,120 +1,87 @@
-.modgit/
-app/code/community/Phoenix/
-app/code/community/Cm/
-app/code/core/
-app/design/adminhtml/default/default/
-app/design/frontend/base/
-app/design/frontend/rwd/
-app/design/frontend/default/blank/
-app/design/frontend/default/default/
-app/design/frontend/default/iphone/
-app/design/frontend/default/modern/
-app/design/frontend/enterprise/default
-app/design/install/
-app/etc/modules/Enterprise_*
-app/etc/modules/Mage_All.xml
-app/etc/modules/Mage_Api.xml
-app/etc/modules/Mage_Api2.xml
-app/etc/modules/Mage_Authorizenet.xml
-app/etc/modules/Mage_Bundle.xml
-app/etc/modules/Mage_Captcha.xml
-app/etc/modules/Mage_Centinel.xml
-app/etc/modules/Mage_Compiler.xml
-app/etc/modules/Mage_Connect.xml
-app/etc/modules/Mage_CurrencySymbol.xml
-app/etc/modules/Mage_Downloadable.xml
-app/etc/modules/Mage_ImportExport.xml
-app/etc/modules/Mage_LoadTest.xml
-app/etc/modules/Mage_Oauth.xml
-app/etc/modules/Mage_PageCache.xml
-app/etc/modules/Mage_Persistent.xml
-app/etc/modules/Mage_Weee.xml
-app/etc/modules/Mage_Widget.xml
-app/etc/modules/Mage_XmlConnect.xml
-app/etc/modules/Phoenix_Moneybookers.xml
-app/etc/modules/Cm_RedisSession.xml
-app/etc/applied.patches.list
-app/etc/config.xml
-app/etc/enterprise.xml
-app/etc/local.xml.additional
-app/etc/local.xml.template
-app/etc/local.xml
-app/.htaccess
-app/locale/
-app/Mage.php
-cron.php
-cron.sh
-downloader/
-errors/
-favicon.ico
-get.php
-includes/
-index.php
-index.php.sample
-/install.php
-js/blank.html
-js/calendar/
-js/enterprise/
-js/extjs/
-js/firebug/
-js/flash/
-js/index.php
-js/jscolor/
-js/lib/
-js/mage/
-js/prototype/
-js/scriptaculous/
-js/spacer.gif
-js/tiny_mce/
-js/varien/
-lib/3Dsecure/
-lib/Apache/
-lib/flex/
-lib/googlecheckout/
-lib/.htaccess
-lib/LinLibertineFont/
-lib/Mage/
-lib/PEAR/
-lib/phpseclib/
-lib/Varien/
-lib/Zend/
-lib/Cm/
-lib/Credis/
-lib/Magento/
-LICENSE_AFL.txt
-LICENSE.html
+/.buildpath
+/.cache
+/.metadata
+/.project
+/.settings
+atlassian*
+/nbproject
+/sitemap
+/sitemap.xml
+/.idea
+/.gitattributes
+/app/config_sandbox
+/app/etc/config.php
+/app/etc/env.php
+/app/code/Magento/TestModule*
+/lib/internal/flex/uploader/.actionScriptProperties
+/lib/internal/flex/uploader/.flexProperties
+/lib/internal/flex/uploader/.project
+/lib/internal/flex/uploader/.settings
+/lib/internal/flex/varien/.actionScriptProperties
+/lib/internal/flex/varien/.flexLibProperties
+/lib/internal/flex/varien/.project
+/lib/internal/flex/varien/.settings
+/node_modules
+/.grunt
+/Gruntfile.js
+/package.json
+
+/pub/media/*.*
+!/pub/media/.htaccess
+/pub/media/catalog/*
+!/pub/media/catalog/.htaccess
+/pub/media/customer/*
+!/pub/media/customer/.htaccess
+/pub/media/downloadable/*
+!/pub/media/downloadable/.htaccess
+/pub/media/import/*
+!/pub/media/import/.htaccess
+/pub/media/theme/*
+/pub/media/theme_customization/*
+!/pub/media/theme_customization/.htaccess
+/pub/media/wysiwyg/*
+!/pub/media/wysiwyg/.htaccess
+/pub/media/tmp/*
+!/pub/media/tmp/.htaccess
+/pub/media/captcha/*
+/pub/static/*
+!/pub/static/.htaccess
+
+/var/*
+!/var/.htaccess
+/vendor/*
+!/vendor/.htaccess
+.htaccess
+
+/bin/*
+/dev/*
+/lib/*
+/setup/*
+/update/*
+/phpserver/*
+/pub/errors/*
+/pub/opt/*
+/app/etc/*
+/app/design/frontend/genius/genius2/
+/app/design/frontend/genius/genius3/
+/app/design/frontend/genius/genius4/
+.php_cs
+adminer.php
+CHANGELOG.md
+composer.json
+composer.lock
+CONTRIBUTING.md
+COPYING.txt
+error_log
+Gruntfile.js.sample
+info.php
+ISSUE_TEMPLATE.md
 LICENSE.txt
-LICENSE_EE*
-mage
-media/customer/
-media/dhl/
-media/downloadable/
-media/.htaccess
-media/import/
-media/xmlconnect/
-media/catalog/product/cache/
-api.php
-nbproject/
-pear
-pear/
+LICENSE_AFL.txt
+nginx.conf.sample
+package.json.sample
+.htaccess.sample
+.user.ini
+index.php
+php.ini
 php.ini.sample
-pkginfo/
-RELEASE_NOTES.txt
-shell/abstract.php
-shell/compiler.php
-shell/indexer.php
-shell/log.php
-skin/adminhtml/default/default/
-skin/adminhtml/default/enterprise
-skin/frontend/base/
-skin/frontend/rwd/
-skin/frontend/default/blank/
-skin/frontend/default/blue/
-skin/frontend/default/default/
-skin/frontend/default/french/
-skin/frontend/default/german/
-skin/frontend/default/iphone/
-skin/frontend/default/modern/
-skin/frontend/enterprise
-skin/install/
-var/
